--- a/Projekt/Index.html
+++ b/Projekt/Index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="front" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="Assets/main.css" />
+    <link rel="stylesheet" href="Assets/Images/pics.css">
     <script src="js/main.js"></script>
     <link
       rel="stylesheet"
@@ -38,154 +39,155 @@
 
     <main>
         <div class="container-wrapper">
-            <div class="container">
-                <div class="container-item title">Jul Kalender 2022</div>
-                <div class="container-item day1">
-                    <div class="tile">
-                        <div class="front">1</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day2">
-                    <div class="tile">
-                        <div class="front">2</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day3">
-                    <div class="tile">
-                        <div class="front">3</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day4">
-                    <div class="tile">
-                        <div class="front">4</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day5">
-                    <div class="tile">
-                        <div class="front">5</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day6">
-                    <div class="tile">
-                        <div class="front">6</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day7">
-                    <div class="tile">
-                        <div class="front">7</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day8">
-                    <div class="tile">
-                        <div class="front">8</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day9">
-                    <div class="tile">
-                        <div class="front">9</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day10">
-                    <div class="tile">
-                        <div class="front">10</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day11">
-                    <div class="tile">
-                        <div class="front">11</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day12">
-                    <div class="tile">
-                        <div class="front">12</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day13">
-                    <div class="tile">
-                        <div class="front">13</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day14">
-                    <div class="tile">
-                        <div class="front">14</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day15">
-                    <div class="tile">
-                        <div class="front">15</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day16">
-                    <div class="tile">
-                        <div class="front">16</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day17">
-                    <div class="tile">
-                        <div class="front">17</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day18">
-                    <div class="tile">
-                        <div class="front">18</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day19">
-                    <div class="tile">
-                        <div class="front">19</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day20">
-                    <div class="tile">
-                        <div class="front">20</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day21">
-                    <div class="tile">
-                        <div class="front">21</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day22">
-                    <div class="tile">
-                        <div class="front">22</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day23">
-                    <div class="tile">
-                        <div class="front">23</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-                <div class="container-item day24">
-                    <div class="tile">
-                        <div class="front">24</div>
-                        <div class="back"></div>
-                    </div>
-                </div>
-            </div>
-      </div>
+			<div class="container">
+				<div class="container-item title">JUl Kalender 22</div>
+				<!--.container-item.day$*25>.tile>.front{$}+.back-->
+				<div class="container-item day1">
+					<div class="tile">
+						<div class="front">1</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day2">
+					<div class="tile">
+						<div class="front">2</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day3">
+					<div class="tile">
+						<div class="front">3</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day4">
+					<div class="tile">
+						<div class="front">4</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day5">
+					<div class="tile">
+						<div class="front">5</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day6">
+					<div class="tile">
+						<div class="front">6</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day7">
+					<div class="tile">
+						<div class="front">7</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day8">
+					<div class="tile">
+						<div class="front">8</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day9">
+					<div class="tile">
+						<div class="front">9</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day10">
+					<div class="tile">
+						<div class="front">10</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day11">
+					<div class="tile">
+						<div class="front">11</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day12">
+					<div class="tile">
+						<div class="front">12</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day13">
+					<div class="tile">
+						<div class="front">13</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day14">
+					<div class="tile">
+						<div class="front">14</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day15">
+					<div class="tile">
+						<div class="front">15</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day16">
+					<div class="tile">
+						<div class="front">16</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day17">
+					<div class="tile">
+						<div class="front">17</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day18">
+					<div class="tile">
+						<div class="front">18</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day19">
+					<div class="tile">
+						<div class="front">19</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day20">
+					<div class="tile">
+						<div class="front">20</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day21">
+					<div class="tile">
+						<div class="front">21</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day22">
+					<div class="tile">
+						<div class="front">22</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day23">
+					<div class="tile">
+						<div class="front">23</div>
+						<div class="back"></div>
+					</div>
+				</div>
+				<div class="container-item day24">
+					<div class="tile">
+						<div class="front">24</div>
+						<div class="back"></div>
+					</div>
+				</div>			
+			</div>
+		</div>
 
       <audio
         autoplay
